--- a/scss/style.scss
+++ b/scss/style.scss
@@ -6,6 +6,11 @@ $common-padding: 20px 20px;
   box-sizing: border-box;
 }
 
+@mixin orange-link() {
+  text-decoration: none;
+  color: orangered;
+}
+
 body {
   margin: 0 auto;
   display: flex;
@@ -16,7 +21,7 @@ body {
 
 .container {
   width: 70vw;
-  background-color: #DCDCDC;
+  background-color: #dcdcdc;
   color: $font-color;
 
   display: grid;
@@ -70,12 +75,12 @@ body {
   flex-direction: column;
   justify-content: center;
 
-  padding: 40px 27px 0 27px;
+  padding-top: 40px;
 
   .slide {
     display: flex;
     justify-content: center;
-    
+
     &_image {
       position: relative;
     }
@@ -100,7 +105,7 @@ body {
     position: absolute;
     top: 170px;
     right: 250px;
-    
+
     &__bullet {
       width: 10px;
       height: 10px;
@@ -115,8 +120,7 @@ body {
   }
 
   .cards {
-    margin-top: 25px;
-    margin-bottom: 25px;
+    margin: 25px 27px;
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
     grid-gap: 40px;
@@ -126,20 +130,155 @@ body {
       flex-direction: column;
       justify-content: center;
 
-      &__paragraph, &__span {
+      &__paragraph,
+      &__span {
         font-size: smaller;
       }
 
       &__link {
-        text-decoration: none;
-        color: orangered;
+        @include orange-link();
       }
     }
   }
 }
 
+.gallery {
+  margin: 0 27px 40px 27px;
+
+  &-grid {
+    display: grid;
+    grid-template-areas:
+      "main one two three"
+      "main four five six";
+    grid-gap: 5px;
+
+    &__main {
+      grid-area: main;
+      justify-self: start;
+    }
+    &__one {
+      grid-area: one;
+      justify-self: center;
+      align-self: start;
+    }
+    &__two {
+      grid-area: two;
+      justify-self: center;
+      align-self: start;
+    }
+    &__three {
+      grid-area: three;
+      justify-self: center;
+      align-self: start;
+    }
+    &__four {
+      grid-area: four;
+      justify-self: center;
+      align-self: end;
+    }
+    &__five {
+      grid-area: five;
+      justify-self: center;
+      align-self: end;
+    }
+    &__six {
+      grid-area: six;
+      justify-self: center;
+      align-self: end;
+    }
+  }
+}
+
+.social-media {
+  padding: 20px 27px;
+
+  background-color: #f5f5f5;
+  display: flex;
+  justify-content: space-between;
+
+  p,
+  span {
+    font-size: smaller;
+  }
+
+  .newsletter,
+  .from-the-blog,
+  .latest-from-twitter {
+    width: 30%;
+  }
+
+  &__span {
+    display: block;
+    text-align: right;
+  }
+
+  &__link {
+    @include orange-link();
+  }
+
+  .blog-post {
+    &__title {
+      margin-bottom: 0;
+    }
+  }
+
+  .form-sign-up {
+    display: flex;
+    justify-content: space-between;
+    height: 30px;
+
+    & > * {
+      display: block;
+      border-radius: 5%;
+      font-family: $font-family;
+      border: 1px solid #dcdcdc;
+    }
+
+    &__email-input {
+      width: 65%;
+    }
+
+    &__submit-button {
+      width: 30%;
+      color: orangered;
+      font-weight: bold;
+    }
+  }
+
+  .social-icons {
+    display: grid;
+    grid-template-areas:
+      "linkedin pinterest"
+      "twitter rss-feed";
+
+      img, p {
+        display: inline-block;
+      }
+
+      img {
+        width: 35px;
+        height: 35px;
+      }
+
+      &__linkedin {
+        grid-area: linkedin;
+      }
+
+      &__pinterest {
+        grid-area: pinterest;
+      }
+
+      &__twitter {
+        grid-area: twitter;
+      }
+
+      &__rss-feed {
+        grid-area: rss-feed;
+      }
+  }
+}
+
 .footer {
-  border-top: 1px solid red;
   padding: $common-padding;
   display: grid;
   grid-template-areas: "left right";
