--- a/scss/style.scss
+++ b/scss/style.scss
@@ -20,8 +20,7 @@ body {
 }
 
 .container {
-  width: 70vw;
-  max-width: 1008px;
+  width: 1008px;
   background-color: #dcdcdc;
   color: $font-color;
 
